apps/oncall/overlay/korriban/istio-routing.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: oncall
  namespace: oncall
spec:
  hosts:
    - "oncall.home.cwbtech.net"
  gateways:
    - istio-system/public-gw
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: oncall-engine.oncall.svc.cluster.local
            port:
              number: 8080
      timeout: 30s
      retries:
        attempts: 2
        perTryTimeout: 15s
      headers:
        request:
          set:
            X-Forwarded-Proto: "https"
            X-Forwarded-Host: "oncall.home.cwbtech.net"
